syntax = "proto3";

package ticket.promocodes.v1;

option csharp_namespace = "TicketService.Grpc.Promocodes";

service PromocodesService {
  rpc CreatePromocode (CreatePromocodeRequest) returns (CreatePromocodeResponse);
  rpc GetPromocodeByCode (GetPromocodeByCodeRequest) returns (GetPromocodeByCodeResponse);
}

message Promocode {
  int64 id = 1;
  string code = 2;
  int64 discount_percentage = 3;
  int64 count = 4;
}

message CreatePromocodeRequest {
  string promo = 1;
  int64 discount_percentage = 2;
  int64 count = 3;
}

message CreatePromocodeResponse {
}

message GetPromocodeByCodeRequest {
  string code = 1;
}

message GetPromocodeByCodeResponse {
  Promocode promocode = 1;
}